testsuite/tests/ghc-regress/parser/should_fail/T3811c.hs

module T3811c where

data D = D

instance !Show D

